syntax = "proto3";
package auth;

option go_package = "github.com/distributedJob/internal/rpc/proto;protopb";

service AuthService {
  rpc Authenticate(AuthRequest) returns (AuthResponse);
  rpc ValidateToken(TokenRequest) returns (TokenValidationResponse);
  rpc GetUserPermissions(UserRequest) returns (PermissionsResponse);
}

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  int64 user_id = 2;
  bool success = 3;
  string message = 4;
}

message TokenRequest {
  string token = 1;
}

message TokenValidationResponse {
  bool valid = 1;
  int64 user_id = 2;
  repeated string permissions = 3;
}

message UserRequest {
  int64 user_id = 1;
}

message PermissionsResponse {
  repeated string permissions = 1;
  bool success = 2;
}